--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ input {
   outline: none;
   text-align: center;
   color: #fff;
+  font-weight: 700;
 }
 
 .search-input {
@@ -41,14 +42,21 @@ input {
 .spinner {
   transition: opacity 0.5s ease;
   opacity: 0;
-  /* disabling interaction whilst elements aren't visible */
-  pointer-events: none;
 }
 
 .search-clear {
   cursor: pointer;
+  position: relative;
+  z-index: 2;
 }
 
+.title {
+  position: relative;
+  z-index: 1;
+}
+
+.videos,
+.middle,
 .grid {
   display: grid;
   place-items: center;
@@ -57,18 +65,60 @@ input {
 .video {
   grid-area: 1/1;
   max-width: 500px;
+  max-height: 500px;
   display: block;
 }
 
+.search-input,
+.videos,
 .full-area {
   grid-area: 1/1;
 }
 
-.search-hint {
+.search-hint,
+.spinner {
   opacity: 0;
   transition: opacity 0.5s ease;
 }
 
-.show-hint .search-hint {
+.show-hint .search-hint,
+.loading .spinner,
+.has-results .search-clear {
   opacity: 1;
+}
+
+.loading .search-hint,
+.has-results .title {
+  opacity: 0;
+}
+
+.title {
+  transition: opacity 0.5s ease;
+}
+
+/* Responsive styling  */
+.video {
+  width: 100%;
+}
+
+.videos {
+  width: 100%;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.search-input {
+  width: 94vw;
+  line-height: 1;
+  height: 88px;
+}
+
+@media (max-width: 480px) {
+  body {
+    font-size: 18px;
+  }
+
+  .search-input {
+    font-size: 32px;
+  }
 }
